--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  outline: none;
+}
+input {
+  outline: 0 !important;
 }
 
 .error {
@@ -28,3 +30,8 @@
   border-radius: 0.25rem;
   text-align: center;
 }
+/* .poster-img {
+  min-width: 500px;
+  height: 700px;
+  object-fit: cover;
+} */
