--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,14 @@ input {
   text-align: center;
 }
 
+.bgBlack {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+body {
+  background: linear-gradient(180deg, #0f628b 0%, #212126 100%);
+}
+
 /* .poster-img {
   min-width: 500px;
   height: 700px;
