--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ input {
 }
 
 body {
-  background: linear-gradient(180deg, #0f628b 0%, #212126 100%);
+  background: linear-gradient(180deg, #ffffff 0%, #c0c0c0 100%);
 }
 
 /* .poster-img {
